src/app/core/site-navbar/site-navbar.component.scss
@import '../../../styles/shared';

$nav-icon-size: 1.25rem !default;
$nav-icon-margin-left: -2px;

$nav-element-active-indicator-width: 4px !default;

$nav-logo-img-margin: 4px !default;
$nav-logo-text-font-size: 1.75rem !default;

$nav-popover-width: 192px !default;

:host {
	display: flex;
	height: 100%;
}

.navbar {
	flex-shrink: 0;
	flex-wrap: nowrap;
	overflow-x: hidden;

	width: $nav-closed-width;

	transition: width 0.15s ease-in-out;

	&.navbar-open {
		width: $nav-open-width;

		.nav-link, .nav-inner-scroll {
			width: $nav-open-width;
		}

		.nav-link {
			.nav-label {
				display: inline-block;
			}
		}
	}

	.navbar-logo {
		img {

			height: auto;
			width: $nav-closed-width - 2 * $nav-logo-img-margin;

			[data-bs-theme=light] & {
				filter: invert(100%);
			}
		}
		.nav-label {
			font-size: $nav-logo-text-font-size;
			font-weight: bold;
		}
	}

	.nav-inner-scroll {
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		justify-content: space-between;
		flex-grow: 1;
		overflow-y: auto;
		overflow-x: hidden;
		width: $nav-closed-width;
	}

	.nav-link {
		width: $nav-closed-width;

		display: flex;
		align-items: center;
		justify-items: start;

		.nav-icon {
			font-size: $nav-icon-size;
			margin: 2px 0 2px $nav-icon-margin-left;
			flex-shrink: 0;

			&.fa-stack {
				font-size: $nav-icon-size * 0.5;
				> span.fa-solid,
				> span.fa-brands {
					vertical-align: middle;
				}
			}

			// new messages number badge
			&.messages-icon[data-new-messages-count]::after {
				content: attr(data-new-messages-count);
				position: absolute;
				left: .75rem;
				border-radius: 50%;
				height: 1rem;
				min-width: 1rem;
				line-height: 1rem;
				font-size: .75rem;
				font-weight: 500;
				background-color: var(--bs-primary-bg-subtle);
				font-family: Roboto, sans-serif;
			}
		}

		.nav-label {
			display: none;
			margin-left: .5rem;
		}

		&.active {
			border-left: $nav-element-active-indicator-width solid var(--bs-secondary);

			.nav-icon {
				margin-left: $nav-icon-margin-left - $nav-element-active-indicator-width;
			}
		}
	}
}

.navbar-content {
	flex-grow: 1;
	flex-shrink: 1;
	overflow: auto;
}

.messages-menu {
	max-width: min(calc(100vw - #{$nav-open-width} - 1rem), #{$nav-messages-popover-max-width});
}

.nav-menu {
	padding: 0;
	width: $nav-popover-width;

	.dropdown-item {
		padding: 10px 24px;
	}
}

